# tp-five-5

repo-root/: contexts-map.puml
repo-root/groups/group-00-example/: domain-summary.md  openapi.yaml  service-declaration.json
repo-root/groups/group-00-example/value-object/: ItemStats.md  Quantity.md
repo-root/groups/group-01-manage-field/: CONTRIBUTION.md  README.md  contexts-map.md  contexts-map.puml  domain-summary.md  openapi.yaml  scenario-reserve-field.activity.puml  service-declaration.json
repo-root/groups/group-01-manage-field/entity/: field.md  field_reservation.md  field_status.md  reservation.md  reservation_status.md  terrain.md  terrain_reservation.md  terrain_status.md
repo-root/groups/group-02-manage-match/: README.md  contexts-map.md  contexts-map.puml  domain-summary.md  scenario-create-character.activity.puml
repo-root/groups/group-03-record-match/: contexts-map.md  domain-summary.md
repo-root/groups/group-04-summarize-match/: contexts-map.md  domain-summary.md  scenario-xx.activity.puml
repo-root/groups/group-04-summarize-match/summarize-match/: .env.example  Cargo.toml
repo-root/groups/group-04-summarize-match/summarize-match/src/: main.rs
repo-root/groups/group-05-manage-player/: README.md  contexts-map.md  domain-summary.md  openapi.yaml  service-declaration.json
repo-root/groups/group-06-manage-team/: contexts-map.puml  domain-summary.md  service-declaration.json
repo-root/openapi/common/: schemas.yaml
repo-root/tests/test-validator/: pom.xml
repo-root/tools/plantuml/: test.puml
(+529 files in other folders)
