[package]
name = "summarize_match"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
